# futurelight

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: pull_request_template.md
Todo/: 2026-06-01_08-05-36-project-roadmap.md  2026-06-01_08-10-55-product-launch-roadmap.md  2026-06-01_10-05-19-real-product-backlog.md  README.md
assets/: asset_manifest.json
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_initial_schema.sql  0002_parent_auth_sessions.sql  0003_seed_initial_course.sql  0004_seed_core_courses.sql  0005_parent_sound_preferences.sql  0006_seed_generated_image_assets.sql  0007_generated_image_asset_metadata.sql  0008_content_admin_workflow.sql  0009_market_variant_content_selection.sql  0010_data_export_request_tracking.sql  0011_support_requests.sql
backend/src/: config.rs  content_checker.rs  domain.rs  errors.rs  lib.rs  main.rs  migrations.rs  security.rs  state.rs
backend/src/repositories/: auth.rs  children.rs  content_admin.rs  courses.rs  health.rs  mod.rs  pages.rs  privacy.rs  progress.rs  retention.rs  support.rs
backend/src/routes/: auth.rs  children.rs  content_admin.rs  courses.rs  health.rs  mod.rs  pages.rs  privacy.rs  progress.rs  support.rs
backend/src/services/: auth.rs  children.rs  content_admin.rs  courses.rs  health.rs  mod.rs  pages.rs  privacy.rs  progress.rs  support.rs
backend/tests/: product_flow_integration.rs  retention_cleanup.rs  security_baseline.rs
deliverables/: README.md  accessibility-report.md  bug-report.md  child-safety-report.md  flow-test-report.md  page-inventory.md  (+3 more)
(+190 files in other folders)
